# steps_aggregator

./: .gitignore  CLAUDE.md  README.md  versions.json
.beads/: issues.jsonl
.github/workflows/: confluence-monitor.yml
scripts/: confluence_ingest.py  create_issues.py  monitor.py
tools/: pyproject.toml  setup.cfg
tools/api_checker/: __init__.py  audit.py  checklist.yaml  cli.py  config.py  exceptions.py  jira_client.py  models.py  plan.py  renderer.py  status.py
tools/api_checker.egg-info/: PKG-INFO
