[metadata]
name = api-checker
version = 0.1.0
description = Plan, track, and audit API development compliance for ID.me engineering

[options]
python_requires = >=3.11
packages = find:
install_requires =
    click>=8.1
    rich>=13.0
    requests>=2.31
    pyyaml>=6.0

[options.entry_points]
console_scripts =
    api-checker = api_checker.cli:main
